--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "cypress": "^9.5.3",
-    "framer-motion": "^6.2.8",
+    "framer-motion": "^6.3.3",
     "next": "^12.1.5",
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
@@ -19,9 +19,9 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
     "swr": "^1.3.0",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
