added authentication with JWT

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_APPLICATION_NAME = 'Coinpascal'
 NEXT_PUBLIC_API_URL = 'http://0.0.0.0:5000'
 # NEXT_PUBLIC_API_URL = 'https://test-api.coinpascal.com'
 NEXT_PUBLIC_APPLICATION_STATUS = 'development'
+NEXT_PUBLIC_ENCRYPTION_KEY = 'ZHcTBjsBy8HhymcAX0bEhix8tqe1A5pMi7b4cg99hRg='
+NEXTAUTH_URL = 'http://localhost:3000/'
