--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "cypress": "^9.5.3",
     "framer-motion": "^6.3.3",
     "next": "^12.1.5",
+    "next-auth": "^4.3.4",
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
