--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-type-animation": "^1.1.3",
     "swr": "^1.3.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
